Modifs sur la présentation

--- a/pdsCrimeTeam/src/main/webapp/WEB-INF/messages/Client_en.properties
+++ b/pdsCrimeTeam/src/main/webapp/WEB-INF/messages/Client_en.properties
@@ -1,9 +1,9 @@
 # Libell\u00e9
-label.titre= CRIME TEAM -: Administrative Form
+label.titre= To plan a visit
 label.soustitre= 1 - REGISTRY OFFICE
 label.svisiteid= ID :
-label.svisitenom= Last Name :
-label.svisitepren= First Name :
+label.svisitenom= First Name of the customer *:
+label.svisitepren= Last Name of the customer *:
 label.svisitesexe= Gender :
 label.svisitedatenaiss= Date of Birth :
 label.svisitemail= Email :
